--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 .lineChild {
   overflow: hidden;
 }
-.wordsChild {
+.wordsParent {
   overflow: hidden;
 }
 .charsParent {
